# Encryption-friendly_LLM_Architecture

./: .gitignore  CHANGELOG.md
ciphertext/: CMakeLists.txt  convert_rte_eval.py  convert_rte_train.py  metric.py  patch_convert.py  result_summary.txt
ciphertext/conda/: hellm-bert-env.yml
ciphertext/examples/: backward-bert-multi.cpp  bert-test.cpp  convert2.cpp
ciphertext/include/HELLM/: HEMMer.hpp
plaintext/: requirements.txt
